# db-governance-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  finding-codes.md  profile-reference.md  safety-boundary.md  v0_4_0_migration_context_and_schema_history_design.md
examples/: evbp-etl.toml  generic.toml
skills/database-governance/: SKILL.md
skills/database-governance/evals/: trigger-evals.json
skills/database-governance/references/: change-classification.md  project-profile.md  report-format.md
skills/database-migration-design/: SKILL.md
src/db_governance/: __init__.py  cli.py  config.py  ddl_manage.py  dictionary.py  diff.py  discovery.py  edit_spec.py  errors.py  generate_ddl.py  git_changes.py  history.py  impact.py  migration_context.py  models.py  render.py  report.py  rules.py  runner.py  scaffold.py  skill_installer.py  templates.py
src/db_governance/skills/database-governance/: SKILL.md
tests/: test_cli.py  test_config.py  test_ddl_manage.py  test_dictionary.py  test_diff.py  test_discovery.py  test_edit_spec.py  test_eval_harness.py  test_evbp_fixture.py  test_generate_ddl.py  test_git_changes.py  test_history.py  test_impact.py  test_migration_context.py  test_render.py  test_rules.py  test_runner.py  test_scaffold.py
tests/fixtures/evbp_like/: .db-governance.toml
tests/fixtures/evbp_like/데이터베이스/: 변경이력.md
tests/fixtures/generic_clean/: .db-governance.toml
tests/fixtures/generic_clean/database/: CHANGELOG.md
tests/fixtures/generic_missing_history/: .db-governance.toml
(+8 files in other folders)
