[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-governance"
version = "0.4.0"
description = "DB Governance CLI and Skill for contract synchronization and change governance"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
]

[project.scripts]
dbg = "db_governance.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "basedpyright>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/db_governance"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
